--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@ ul {
     gap: 14px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: hsl(0, 0%, 90%);
+}
+
 #hero-section, #footer {
     background-color: #1f2937;
     color: white;
@@ -28,6 +37,10 @@ ul {
     font-weight: 800;
 }
 
+.header-logo:hover {
+    color: hsl(0, 0%, 90%);
+}
+
 .hero {
     display: flex;
     padding: 100px 0px;
@@ -36,6 +49,12 @@ ul {
 img{
     width: 500px;
     height: 240px;
+}
+
+img:hover {
+    width: 492px;
+    height: 232px;
+    border: 4px double yellowgreen;
 }
 
 h1 {
@@ -48,6 +67,10 @@ p {
     font-size: 18px;
     margin: 0;
     padding: 15px 10px 18px 0px;
+}
+
+h1:hover, p:hover {
+    color: hsl(0, 0%, 90%);
 }
 
 button {
@@ -89,6 +112,14 @@ button {
     border-radius: 10%;
 }
 
+.box:hover {
+    border: 4px solid rgb(199, 81, 61);
+}
+
+.box:active {
+    background-color: #3882f6;
+}
+
 .sub-text {
     text-align: center;
     padding-top: 10px;
@@ -120,6 +151,10 @@ button {
     padding: 5px 20px 100px 0px;
 }
 
+.quote:hover, .quote-author:hover {
+    color: rgb(199, 81, 61);
+}
+
 #call-to-action {
     display: flex;
     justify-content: center;
@@ -135,6 +170,10 @@ button {
     gap: 140px;
 }
 
+.call-to-action:hover {
+    background-color: hsl(217, 91%, 54%);
+}
+
 .call-text-container {
     display: flex;
     flex-direction: column;
@@ -146,10 +185,28 @@ button {
     font-weight: bolder;
 }
 
+.call-text:hover {
+    color: hsl(0, 0%, 95%);
+}
+
 .button2 {
     border: 2px solid white;
 }
 
+button:hover {
+    background-color: rgb(199, 81, 61);
+    padding: 8px 36px;
+} 
+
 .footer {
     padding: 30px 0px;
+}
+
+.footer:hover span {
+    color: hsl(0, 0%, 85%);
+    display: inline;
+}
+
+span {
+    display: none;
 }
