--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,12 @@ a:hover {
     padding: 100px 0px;
 }
 
+@media screen and (max-width:700px) {
+    .hero {
+        flex-direction: column;
+    }
+}
+
 img{
     width: 500px;
     height: 240px;
@@ -103,6 +109,12 @@ button {
 .info-content {
     display: flex;
     gap: 40px;
+}
+
+@media screen and (max-width:700px) {
+    .info-content {
+        flex-wrap: wrap;
+    }
 }
 
 .box {
